// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add.vue renders correctly 1`] = `
<div>
   
  <div>
    
    Versuch ein neues Wort zu bilden, indem du einen Buchstaben hinzufügst.
  
  </div>
   
  <div
    class="word-container flex-item flex-col flex-center flex-flex"
    id="word-container"
  >
    <div
      class="flex-item flex-row flex-center"
    >
      <div
        class="word-char card locked"
        id="word-char-0"
      >
        
        A
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-1"
      >
        
        D
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-2"
      >
        
        L
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-3"
      >
        
        E
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-4"
      >
        
        R
      
      </div>
       
      <div />
    </div>
     
    <div
      class="svg-container"
    >
      <svg
        class="svg-item"
      >
        <defs>
          <marker
            id="arrowhead"
            markerHeight="6"
            markerWidth="6"
            orient="auto"
            refX="1"
            refY="5"
            viewBox="0 0 10 10"
          >
            <path
              d="M 0 5 L 10 0 L 10 10 z"
            />
          </marker>
        </defs>
         
        <line
          fill="transparent"
          id="arrow-0"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-1"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-2"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-3"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-4"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-5"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
         
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-0"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-1"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-2"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-3"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-4"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-5"
          width="40"
          x="-20"
          y="-10"
        />
      </svg>
    </div>
  </div>
   
  <hr />
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch"
  >
    <itemselection-stub
      items="[object Object],[object Object],[object Object]"
    />
     
    <undo-stub />
  </div>
</div>
`;

exports[`Change.vue renders correctly 1`] = `
<div>
  <div>
    
    Versuch ein neues Wort zu bilden, indem du einen Buchstaben änderst.
  
  </div>
   
  <div
    class="word-container flex-item flex-row flex-center"
  >
    <div>
      <div
        class="word-char card locked"
      >
        
        A
      
      </div>
    </div>
    <div>
      <div
        class="word-char card locked"
      >
        
        D
      
      </div>
    </div>
    <div>
      <div
        class="word-char card locked"
      >
        
        L
      
      </div>
    </div>
    <div>
      <div
        class="word-char card locked"
      >
        
        E
      
      </div>
    </div>
    <div>
      <div
        class="word-char card locked"
      >
        
        R
      
      </div>
    </div>
  </div>
   
  <hr />
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch"
  >
    <itemselection-stub
      items="[object Object],[object Object],[object Object]"
    />
     
    <undo-stub />
  </div>
</div>
`;

exports[`Remove.vue renders correctly 1`] = `
<div>
  <div>
    
    Versuch ein neues Wort zu bilden, indem du einen Buchstaben entfernst.
  
  </div>
   
  <div
    class="word-container flex-item flex-row flex-center"
  >
    <div>
      <div
        class="word-char card clickable locked"
        draggable="true"
      >
        
        A
      
      </div>
    </div>
    <div>
      <div
        class="word-char card clickable locked"
        draggable="true"
      >
        
        D
      
      </div>
    </div>
    <div>
      <div
        class="word-char card clickable locked"
        draggable="true"
      >
        
        L
      
      </div>
    </div>
    <div>
      <div
        class="word-char card clickable locked"
        draggable="true"
      >
        
        E
      
      </div>
    </div>
    <div>
      <div
        class="word-char card clickable locked"
        draggable="true"
      >
        
        R
      
      </div>
    </div>
  </div>
   
  <hr />
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch"
  >
    <trashcan-stub />
     
    <undo-stub />
  </div>
</div>
`;
